2/04/03 - 0.3:
Updated the primary plugin with Nascif A. Abousalh-Neto's contributions.  Note that these changes include an updated pmd-1.02.jar file to support them.  These changes will be part of pmd-1.03 when it comes out; this is just an updated release of 
pmd-1.02 to support this Emacs plugin.
Added an alternate plugin that doesn't require the Emacs XML stuff to be installed; thx to Jason Rumney.


1/16/03 - 0.2:
Completely rewritten by John Russell.

6/6/02 - 0.1:
First version of PMD for Emacs

Defined one function "pmd-current-buffer" which will
run PMD on the current buffer, and write the output
to *PMD*

Output format is in XML.  I will work in trying to 
get a better, easier to read format for everyone.

Share and Enjoy!
