@@ -1,0 +1,4 @@
+#!/bin/bash
+
+mkdir pmd-emacs-0.6
+cp src/elisp/pmd.el CHANGELOG INSTALL LICENSE.txt pmd-emacs-0.6
